Memodifikasi file style.css

--- a/index.html
+++ b/index.html
@@ -10,5 +10,23 @@
 </head>
 <body>
     
+    <div class="circle"></div>
+    <div class="card">
+        <div class="logo">
+            <i class='bx bx-bitcoin'></i>
+        </div>
+        <h2>Create Account</h2>
+        <form class="form">
+            <input type="text" placeholder="Name">
+            <input type="email" placeholder="Email">
+            <input type="password" placeholder="Password">
+            <button type="submit">SIGN UP</button>
+        </form>
+        <footer>
+            Existing users, sign in
+            <a href="#">Here</a>
+        </footer>
+    </div>
+
 </body>
 </html>
